--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', end
    border-bottom-width:1px;
    border-bottom-style:dotted;
    border-bottom-color: #848484;
-   margin-bottom:2cm;
+   margin-bottom:1cm;
 }
 
 #header-text {
@@ -72,7 +72,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', end
    background-color:white;
    box-shadow: 0px 6px 8px #000;
    margin-left: auto;
-   margin-right: auto
+   margin-right: auto;
 }
 
 #page-wrap a {
