--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,7 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import url(http://fonts.googleapis.com/css?family=Signika);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+@import url(http://fonts.googleapis.com/css?family=BenchNine:300,400);
 
 html, body {
     margin: 0;
