--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 /*!
- * PixelCheeseCake Stylesheet (code)
- * Copyright 2012-2015 PixelCC, LTD
- * Email: contact@pixelcc.info
+ * Josh Wilson's Stylesheet (code)
+ * Author: Josh Wilson
+ * Copyright 2012- PixelCC, LTD
+ * Email: pixelcheesecake@gmail.com
  */
 
 @import url(http://fonts.googleapis.com/css?family=Pacifico);
