--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', end
 
 #header {
    width:100%;
-   height:75px;
+   height:20%;
    top:0;
    padding:10px;
    background-color:#F2F2F2;
