--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ background: -o-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 
 background: -ms-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-8 */
-background-size: 100% 100%;
+background-size: 100%;
     background-repeat: no-repeat;
 
 }
