--- a/pixelcc.css
+++ b/pixelcc.css
@@ -1,8 +1,9 @@
 /*!
  * PixelCheeseCake Stylesheet (code)
- * Copyright 2012-2015 PixelCC, LTD
+ * Author: Josh "Eathuis" Wilson
+ * Copyright 2012-2016 PixelCC, LTD
  * Licensed under Creative Commons (//creativecommons.org)
- * Email: contact@pixelcc.info
+ * Email: pixelcheesecake@gmail.com
  */
 
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
