--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -13,7 +13,7 @@
 #headerfiller {top:0;width:100%;z-index:-999;height:25px;background-color:#0C2F48;color:white;font-family: 'Pacifico', cursive;font-size:15px;}
 #headerfiller a {color:red;text-decoration:none;}
 #headerfiller a:hover {text-decoration:underline;}
-div.content {background-color:white; width:75%; padding:10px; box-shadow: 0px 6px 8px #000; margin-bottom:1cm;}
+div.content {background-color:#E6E6E6; width:75%; padding:10px; box-shadow: 0px 6px 8px #000; margin-bottom:1cm;}
 div.content td {font-family: 'Roboto', sans-serif;}
 div.content hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);}
 div.content p {font-family: 'Montserrat', sans-serif;}
