--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -61,6 +61,14 @@ h3.forumuse {float:left; position:absolute;}
 #footerinfo a{color:white;}
 #footerinfo a:hover{color:000;}
 
+#tweet {
+	background-color:#0C2F48;
+	color:white;
+	float:left;
+	border-radius:10px;
+	padding:5px;
+}
+
 .marquee {
     margin-left: auto;
     margin-right: auto;
