--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -62,6 +62,8 @@ h3.forumuse {float:left; position:absolute;}
 #footerinfo a:hover{color:000;}
 
 #tweet {
+	margin-top:auto;
+	margin-bottom:auto;
 	color:black;
 	float:left;
 	width:20px;
