--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -6,11 +6,12 @@
  * Email: pixelcheesecake@gmail.com
  */
  
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @import url(http://fonts.googleapis.com/css?family=Pacifico);
-#headerfiller {text-transform:uppercase;top:0;width:100%;z-index:-999;height:25px;background-color:#0C2F48;color:white;font-family: verdana;font-size:15px;}
+#headerfiller {text-transform:uppercase;top:0;width:100%;z-index:-999;height:25px;background-color:#0C2F48;color:white;font-family: 'Raleway', sans-serif;font-size:small;}
 #headerfiller a {color:red;text-decoration:none;}
 #headerfiller a:hover {text-decoration:underline;}
 #headerfiller p { text-align: left;
