--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -6,6 +6,16 @@
  * Email: pixelcheesecake@gmail.com
  */
  
+ <!--
+__________.__              .__  _________ .__                                               __           
+\______   \__|__  ___ ____ |  | \_   ___ \|  |__   ____   ____   ______ ____   ____ _____  |  | __ ____  
+ |     ___/  \  \/  // __ \|  | /    \  \/|  |  \_/ __ \_/ __ \ /  ___// __ \_/ ___\\__  \ |  |/ // __ \ 
+ |    |   |  |>    <\  ___/|  |_\     \___|   Y  \  ___/\  ___/ \___ \\  ___/\  \___ / __ \|    <\  ___/ 
+ |____|   |__/__/\_ \\___  >____/\______  /___|  /\___  >\___  >____  >\___  >\___  >____  /__|_ \\___  >
+                   \/    \/             \/     \/     \/     \/     \/     \/     \/     \/     \/    \/       
+
+!-->
+ 
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
