--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -45,7 +45,8 @@ div.content {background-color:#E6E6E6; width:75%; padding:10px; box-shadow: 0px 
 div.content td {font-family: 'Roboto', sans-serif;}
 div.content hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);}
 div.content p {font-family: 'Montserrat', sans-serif;}
-div.img {position:absolute; left: 300px;}
+div.img { opacity: 0.4;filter: alpha(opacity=40); /* For IE8 and earlier */position:absolute; left: 300px;}
+div.img:hover {opacity: 1.0;filter: alpha(opacity=100); /* For IE8 and earlier */}
 #header{ background: url("//eathuis.github.io/pixelcc/images/cheesecake_name.png"); background-size: 400px 200px; background-repeat: no-repeat; background-position: center; position:relative; top:0; height:230px; width:100%; background-color:#E6E6E6;}
 #header img {height:198px; width:60%;}
 body {width:100%; background-image: url(""); background: rgb(41,137,216); /* Old browsers */
