--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -182,7 +182,6 @@ h3.forumuse {float:left; position:absolute;}
     width:500px;     
     margin-top:-75px;
     margin-left:-150px;
-    background:#FFFFFF;
-    border:2px solid #000;
+    background:#E6E6E6;
     z-index:100000;      
 }
