--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -162,7 +162,7 @@ h3.forumuse {float:left; position:absolute;}
 }
 
 
-#overlay {
+#overlay1 {
     display:none;    
     position:fixed;  
     left:0px;        
@@ -174,7 +174,132 @@ h3.forumuse {float:left; position:absolute;}
     z-index:99999;   
 }
 
-#popup {
+#popup1 {
+    display:none;
+    padding: 5px;
+    position:fixed;
+    left:50%;        
+    top:30%;         
+    width:500px;     
+    margin-top:-75px;
+    margin-left:-150px;
+    background:#E6E6E6;
+    z-index:100000;      
+}
+
+#overlay2 {
+    display:none;    
+    position:fixed;  
+    left:0px;        
+    top:0px;         
+    width:100%;      
+    height:100%;     
+    background:#000; 
+    opacity:0.5;     
+    z-index:99999;   
+}
+
+#popup2 {
+    display:none;
+    padding: 5px;
+    position:fixed;
+    left:50%;        
+    top:30%;         
+    width:500px;     
+    margin-top:-75px;
+    margin-left:-150px;
+    background:#E6E6E6;
+    z-index:100000;      
+}
+
+#overlay3 {
+    display:none;    
+    position:fixed;  
+    left:0px;        
+    top:0px;         
+    width:100%;      
+    height:100%;     
+    background:#000; 
+    opacity:0.5;     
+    z-index:99999;   
+}
+
+#popup3 {
+    display:none;
+    padding: 5px;
+    position:fixed;
+    left:50%;        
+    top:30%;         
+    width:500px;     
+    margin-top:-75px;
+    margin-left:-150px;
+    background:#E6E6E6;
+    z-index:100000;      
+}
+
+#overlay4 {
+    display:none;    
+    position:fixed;  
+    left:0px;        
+    top:0px;         
+    width:100%;      
+    height:100%;     
+    background:#000; 
+    opacity:0.5;     
+    z-index:99999;   
+}
+
+#popup4 {
+    display:none;
+    padding: 5px;
+    position:fixed;
+    left:50%;        
+    top:30%;         
+    width:500px;     
+    margin-top:-75px;
+    margin-left:-150px;
+    background:#E6E6E6;
+    z-index:100000;      
+}
+
+#overlay5 {
+    display:none;    
+    position:fixed;  
+    left:0px;        
+    top:0px;         
+    width:100%;      
+    height:100%;     
+    background:#000; 
+    opacity:0.5;     
+    z-index:99999;   
+}
+
+#popup5 {
+    display:none;
+    padding: 5px;
+    position:fixed;
+    left:50%;        
+    top:30%;         
+    width:500px;     
+    margin-top:-75px;
+    margin-left:-150px;
+    background:#E6E6E6;
+    z-index:100000;      
+}
+
+#overlay6 {
+    display:none;    
+    position:fixed;  
+    left:0px;        
+    top:0px;         
+    width:100%;      
+    height:100%;     
+    background:#000; 
+    opacity:0.5;     
+    z-index:99999;   
+}
+
+#popup6 {
     display:none;
     padding: 5px;
     position:fixed;
