--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -311,3 +311,21 @@ h3.forumuse {float:left; position:absolute;}
     background:#E6E6E6;
     z-index:100000;      
 }
+
+/* Buttons adapted from //www.graemeboy.com/css-buttons */
+
+.styled-button-4 {
+	-webkit-box-shadow:rgba(0,0,0,0.98) 0 1px 0 0;
+	-moz-box-shadow:rgba(0,0,0,0.98) 0 1px 0 0;
+	box-shadow:rgba(0,0,0,0.98) 0 1px 0 0;
+	background-color:#EEE;
+	border-radius:0;
+	-webkit-border-radius:0;
+	-moz-border-radius:0;
+	border:1px solid #999;
+	color:#666;
+	font-family:'Lucida Grande',Tahoma,Verdana,Arial,Sans-serif;
+	font-size:11px;
+	font-weight:700;
+	padding:2px 6px;
+}
