--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -6,6 +6,7 @@
  * Email: pixelcheesecake@gmail.com
  */
  
+@import url(https://fonts.googleapis.com/css?family=Sintony:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
@@ -92,240 +93,14 @@ h3.forumuse {float:left; position:absolute;}
 #footerinfo a{color:white;}
 #footerinfo a:hover{color:000;}
 
-#tweet {
-	color:black;
-	float:left;
-	padding:50px;
-	border-radius:10px;
+.butt {
+	
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:white;
 }
 
-.marquee {
-    margin-left: auto;
-    margin-right: auto;
-    overflow: hidden;
-    position: relative;
-}
-
-.marquee p {
-    position: absolute;
-    text-align: center;
-    color: #fff;
-  text-shadow: 1px 1px 0px #000000;
-  filter: dropshadow(color=#000000, offx=1, offy=1);
-  transform:translateX(100%);
-	-moz-transform:translateX(100%);
-	-webkit-transform:translateX(100%);
-}
-
-.marquee p:nth-child(1) {
-    animation: left-one 20s ease infinite;
-}
-.marquee p:nth-child(2) {
-    animation: left-two 20s ease infinite;
-}
-
-/* Key Frames */
-
- @keyframes left-one {
-    0%  {
-        transform:translateX(100%);
-    }
-    10% {
-        transform:translateX(0);
-    }
-    40% {
-        transform:translateX(0);
-    }
-    50% {
-        transform:translateX(-100%);
-    }
-    100%{
-        transform:translateX(-100%);
-    }
-}
-@keyframes left-two {
-    0% {
-        transform:translateX(100%);
-    }
-    50% {
-        transform:translateX(100%);
-    }
-    60% {
-        transform:translateX(0);        
-    }
-    90% {
-        transform:translateX(0);        
-    }
-    100%{
-        transform:translateX(-100%);
-    }
-}
-
-
-#overlay1 {
-    display:none;    
-    position:fixed;  
-    left:0px;        
-    top:0px;         
-    width:100%;      
-    height:100%;     
-    background:#000; 
-    opacity:0.5;     
-    z-index:99999;   
-}
-
-#popup1 {
-    display:none;
-    padding: 5px;
-    position:fixed;
-    left:50%;        
-    top:30%;         
-    width:500px;     
-    margin-top:-75px;
-    margin-left:-150px;
-    background:#E6E6E6;
-    z-index:100000;      
-}
-
-#overlay2 {
-    display:none;    
-    position:fixed;  
-    left:0px;        
-    top:0px;         
-    width:100%;      
-    height:100%;     
-    background:#000; 
-    opacity:0.5;     
-    z-index:99999;   
-}
-
-#popup2 {
-    display:none;
-    padding: 5px;
-    position:fixed;
-    left:50%;        
-    top:30%;         
-    width:500px;     
-    margin-top:-75px;
-    margin-left:-150px;
-    background:#E6E6E6;
-    z-index:100000;      
-}
-
-#overlay3 {
-    display:none;    
-    position:fixed;  
-    left:0px;        
-    top:0px;         
-    width:100%;      
-    height:100%;     
-    background:#000; 
-    opacity:0.5;     
-    z-index:99999;   
-}
-
-#popup3 {
-    display:none;
-    padding: 5px;
-    position:fixed;
-    left:50%;        
-    top:30%;         
-    width:500px;     
-    margin-top:-75px;
-    margin-left:-150px;
-    background:#E6E6E6;
-    z-index:100000;      
-}
-
-#overlay4 {
-    display:none;    
-    position:fixed;  
-    left:0px;        
-    top:0px;         
-    width:100%;      
-    height:100%;     
-    background:#000; 
-    opacity:0.5;     
-    z-index:99999;   
-}
-
-#popup4 {
-    display:none;
-    padding: 5px;
-    position:fixed;
-    left:50%;        
-    top:30%;         
-    width:500px;     
-    margin-top:-75px;
-    margin-left:-150px;
-    background:#E6E6E6;
-    z-index:100000;      
-}
-
-#overlay5 {
-    display:none;    
-    position:fixed;  
-    left:0px;        
-    top:0px;         
-    width:100%;      
-    height:100%;     
-    background:#000; 
-    opacity:0.5;     
-    z-index:99999;   
-}
-
-#popup5 {
-    display:none;
-    padding: 5px;
-    position:fixed;
-    left:50%;        
-    top:30%;         
-    width:500px;     
-    margin-top:-75px;
-    margin-left:-150px;
-    background:#E6E6E6;
-    z-index:100000;      
-}
-
-#overlay6 {
-    display:none;    
-    position:fixed;  
-    left:0px;        
-    top:0px;         
-    width:100%;      
-    height:100%;     
-    background:#000; 
-    opacity:0.5;     
-    z-index:99999;   
-}
-
-#popup6 {
-    display:none;
-    padding: 5px;
-    position:fixed;
-    left:50%;        
-    top:30%;         
-    width:500px;     
-    margin-top:-75px;
-    margin-left:-150px;
-    background:#E6E6E6;
-    z-index:100000;      
-}
-
-/* Buttons adapted from //www.graemeboy.com/css-buttons */
-
-.styled-button-4 {
-	-webkit-box-shadow:rgba(0,0,0,0.98) 0 1px 0 0;
-	-moz-box-shadow:rgba(0,0,0,0.98) 0 1px 0 0;
-	box-shadow:rgba(0,0,0,0.98) 0 1px 0 0;
-	background-color:#EEE;
-	border-radius:0;
-	-webkit-border-radius:0;
-	-moz-border-radius:0;
-	border:1px solid #999;
-	color:#666;
-	font-family:'Lucida Grande',Tahoma,Verdana,Arial,Sans-serif;
-	font-size:11px;
-	font-weight:700;
-	padding:2px 6px;
+.butt:hover {
+	background-color:black;
 }
