--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -94,7 +94,7 @@ h3.forumuse {float:left; position:absolute;}
 #footerinfo a:hover{color:000;}
 
 .butt {
-	
+	background-size: 40px;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
@@ -102,5 +102,6 @@ h3.forumuse {float:left; position:absolute;}
 }
 
 .butt:hover {
+	text-decoration:none;
 	background-color:black;
 }
