--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -94,7 +94,6 @@ h3.forumuse {float:left; position:absolute;}
 #footerinfo a:hover{color:000;}
 
 .butt {
-	background-size: 40px auto;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
@@ -104,5 +103,13 @@ h3.forumuse {float:left; position:absolute;}
 .butt:hover {
 	text-decoration:none;
 	background-color:black;
+	background-size: 40px auto;
+	color:white;
+}
+
+.butt:visited {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
 	color:white;
 }
