--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -108,6 +108,7 @@ h3.forumuse {float:left; position:absolute;}
 }
 
 .butt:visited {
+	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
