--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -115,6 +115,138 @@ h3.forumuse {float:left; position:absolute;}
 	color:white;
 }
 
+.butt-yt {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#DF2925;
+}
+
+.butt-yt:hover {
+	text-decoration:none;
+	background-color:black;
+	background-size: 40px auto;
+	color:#9B110E;
+}
+
+.butt-yt:visited {
+	text-decoration:none;
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#DF2925;
+}
+
+.butt-st {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:white;
+}
+
+.butt-st:hover {
+	text-decoration:none;
+	background-color:black;
+	background-size: 40px auto;
+	color:#44464C;
+}
+
+.butt-st:visited {
+	text-decoration:none;
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:white;
+}
+
+.butt-tw {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#55ACEE;
+}
+
+.butt-tw:hover {
+	text-decoration:none;
+	background-color:black;
+	background-size: 40px auto;
+	color:#2D6997;
+}
+
+.butt-tw:visited {
+	text-decoration:none;
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#55ACEE;
+}
+
+.butt-fb {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#415E9B;
+}
+
+.butt-fb:hover {
+	text-decoration:none;
+	background-color:black;
+	background-size: 40px auto;
+	color:#608AE4;
+}
+
+.butt-fb:visited {
+	text-decoration:none;
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#415E9B;
+}
+
+.butt-rt {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#CEE3F8;
+}
+
+.butt-rt:hover {
+	text-decoration:none;
+	background-color:black;
+	background-size: 40px auto;
+	color:#A0B2C5;
+}
+
+.butt-rt:visited {
+	text-decoration:none;
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#CEE3F8;
+}
+
+.butt-af {
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#8DC700;
+}
+
+.butt-af:hover {
+	text-decoration:none;
+	background-color:black;
+	background-size: 40px auto;
+	color:#5F8402;
+}
+
+.butt-af:visited {
+	text-decoration:none;
+	text-transform:uppercase;
+	font-family: 'Sintony', sans-serif;
+	font-size: large;
+	color:#8DC700;
+}
+
 #tweet {
 	color:black;
 	float:left;
