--- a/pixelcc/css/stylesheet.css
+++ b/pixelcc/css/stylesheet.css
@@ -115,21 +115,21 @@ h3.forumuse {float:left; position:absolute;}
 	color:white;
 }
 
-.butt-yt {
+.buttyt {
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
 	color:#DF2925;
 }
 
-.butt-yt:hover {
+.buttyt:hover {
 	text-decoration:none;
 	background-color:black;
 	background-size: 40px auto;
 	color:#9B110E;
 }
 
-.butt-yt:visited {
+.buttyt:visited {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
@@ -137,21 +137,21 @@ h3.forumuse {float:left; position:absolute;}
 	color:#DF2925;
 }
 
-.butt-st {
+.buttst {
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
 	color:white;
 }
 
-.butt-st:hover {
+.buttst:hover {
 	text-decoration:none;
 	background-color:black;
 	background-size: 40px auto;
 	color:#44464C;
 }
 
-.butt-st:visited {
+.buttst:visited {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
@@ -159,21 +159,21 @@ h3.forumuse {float:left; position:absolute;}
 	color:white;
 }
 
-.butt-tw {
+.butttw {
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
 	color:#55ACEE;
 }
 
-.butt-tw:hover {
+.butttw:hover {
 	text-decoration:none;
 	background-color:black;
 	background-size: 40px auto;
 	color:#2D6997;
 }
 
-.butt-tw:visited {
+.butttw:visited {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
@@ -181,21 +181,21 @@ h3.forumuse {float:left; position:absolute;}
 	color:#55ACEE;
 }
 
-.butt-fb {
+.buttfb {
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
 	color:#415E9B;
 }
 
-.butt-fb:hover {
+.buttfb:hover {
 	text-decoration:none;
 	background-color:black;
 	background-size: 40px auto;
 	color:#608AE4;
 }
 
-.butt-fb:visited {
+.buttfb:visited {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
@@ -203,21 +203,21 @@ h3.forumuse {float:left; position:absolute;}
 	color:#415E9B;
 }
 
-.butt-rt {
+.buttrt {
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
 	color:#CEE3F8;
 }
 
-.butt-rt:hover {
+.buttrt:hover {
 	text-decoration:none;
 	background-color:black;
 	background-size: 40px auto;
 	color:#A0B2C5;
 }
 
-.butt-rt:visited {
+.buttrt:visited {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
@@ -225,21 +225,21 @@ h3.forumuse {float:left; position:absolute;}
 	color:#CEE3F8;
 }
 
-.butt-af {
+.buttaf {
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
 	font-size: large;
 	color:#8DC700;
 }
 
-.butt-af:hover {
+.buttaf:hover {
 	text-decoration:none;
 	background-color:black;
 	background-size: 40px auto;
 	color:#5F8402;
 }
 
-.butt-af:visited {
+.buttaf:visited {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-family: 'Sintony', sans-serif;
